chore(build): use search_dependency to add AppImageUpdaterBridge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,11 @@ if(APPLE)
     /usr/local/opt/openal-soft/lib/pkgconfig:$ENV{PKG_CONFIG_PATH})
 endif()
 
+if(${APPIMAGE_UPDATER_BRIDGE})
+  set(ENV{PKG_CONFIG_PATH}
+    /usr/local/lib/pkgconfig:$ENV{PKG_CONFIG_PATH})
+endif()
+
 execute_process(
   COMMAND brew --prefix qt5
   OUTPUT_VARIABLE QT_PREFIX_PATH
@@ -691,12 +696,16 @@ endif()
 
 if(${UPDATE_CHECK})
     add_definitions(-DUPDATE_CHECK_ENABLED=1)
-    if(APPIMAGE_UPDATER_BRIDGE_SRC_DIR AND APPIMAGE_UPDATER_BRIDGE_BUILD_DIR)
-        message(STATUS "using AppImageUpdaterBridge")
-        add_definitions(-DAPPIMAGE_UPDATER_BRIDGE_ENABLED=1)
-        include_directories(${APPIMAGE_UPDATER_BRIDGE_SRC_DIR})
+    if(${APPIMAGE_UPDATER_BRIDGE})
+        search_dependency(AIUB  PACKAGE AppImageUpdaterBridge)
+        if(AIUB_FOUND)
+		message(STATUS "using AppImageUpdaterBridge")
+                add_definitions(-DAPPIMAGE_UPDATER_BRIDGE_ENABLED=1)
+	else()
+                message(STATUS "cannot find AppImageUpdaterBridge , ignoring cmake flag")
+        endif()
     else()
-        message(STATUS "NOT using AppImageUpdaterBridge")
+        message(STATUS "not using AppImageUpdaterBridge")
     endif()
     set(${PROJECT_NAME}_SOURCES ${${PROJECT_NAME}_SOURCES}
         src/net/updatecheck.cpp
@@ -737,18 +746,10 @@ add_library(${PROJECT_NAME}_static
   ${${PROJECT_NAME}_SOURCES}
   ${${PROJECT_NAME}_QM_FILES}
   ${${PROJECT_NAME}_RESOURCES})
+target_link_libraries(${PROJECT_NAME}_static
+  ${CMAKE_REQUIRED_LIBRARIES}
+  ${ALL_LIBRARIES})
 
-if(APPIMAGE_UPDATER_BRIDGE_BUILD_DIR AND APPIMAGE_UPDATER_BRIDGE_SRC_DIR AND UPDATE_CHECK)
-    target_link_libraries(${PROJECT_NAME}_static
-    ${CMAKE_REQUIRED_LIBRARIES}
-    ${ALL_LIBRARIES}
-    ${APPIMAGE_UPDATER_BRIDGE_BUILD_DIR}/libAppImageUpdaterBridge.a)
-else()
-    target_link_libraries(${PROJECT_NAME}_static
-    ${CMAKE_REQUIRED_LIBRARIES}
-    ${ALL_LIBRARIES})
-endif()
-  
 add_executable(${PROJECT_NAME}
   WIN32
   MACOSX_BUNDLE
