fix(ui): implement and connect reloadTheme in leaf classes
This allows leaf classes to update independently when the GUI has changed themes, without
their parent having to call updateTheme() manually.

Fix #5924
Fix #5592

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -482,6 +482,9 @@ set(${PROJECT_NAME}_SOURCES
   src/widget/translator.h
   src/widget/widget.cpp
   src/widget/widget.h
+  src/widget/widgetstyle.h
+  src/widget/framestyle.h
+  src/widget/dialogstyle.h
 )
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
