--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache: ccache
 # regex is for master, release branches, and release tags
 branches:
   only:
-    - master
+    - add_chatlog_test
     - /^v\d+\.\d+-dev$/
     - /^v(\d+\.){2}\d+$/
 
