Revert "Update .travis.yml"
This reverts commit c6d52c9190cc0865190434526dcd4b4f14250bc8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache: ccache
 # regex is for master, release branches, and release tags
 branches:
   only:
-    - add_chatlog_test
+    - master
     - /^v\d+\.\d+-dev$/
     - /^v(\d+\.){2}\d+$/
 
