fix(ci): quote shell comparison to avoid errors when unset
Avoids log of "/home/travis/.travis/functions: line 109: test: ==: unary
operator expected" in travisci build output

--- a/.travis.yml
+++ b/.travis.yml
@@ -271,12 +271,12 @@ deploy:
 
 after_success:
   - >
-    test $TRAVIS_PULL_REQUEST == "false"
-    && test $TRAVIS_BRANCH == "master"
-    && test $JOB == "build-docs"
+    test "$TRAVIS_PULL_REQUEST" == "false"
+    && test "$TRAVIS_BRANCH" == "master"
+    && test "$JOB" == "build-docs"
     && bash ./.travis/deploy-docs.sh
   - >
-    test $TRAVIS_PULL_REQUEST == "false"
-    && test $TRAVIS_BRANCH == "master"
-    && test $JOB == "build-gitstats"
+    test "$TRAVIS_PULL_REQUEST" == "false"
+    && test "$TRAVIS_BRANCH" == "master"
+    && test "$JOB" == "build-gitstats"
     && bash ./.travis/deploy-gitstats.sh
