--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -369,6 +369,8 @@ set(${PROJECT_NAME}_SOURCES
   src/model/chathistory.cpp
   src/model/toxclientstandards.h
   src/model/ibootstraplistgenerator.h
+  src/model/notificationgenerator.h
+  src/model/notificationgenerator.cpp
   src/net/bootstrapnodeupdater.cpp
   src/net/bootstrapnodeupdater.h
   src/net/avatarbroadcaster.cpp
