refactor(audio): make Audio a separate subproject

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,18 +257,6 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc)
 
 set(${PROJECT_NAME}_SOURCES
-  src/audio/audio.cpp
-  src/audio/audio.h
-  src/audio/backend/alsink.cpp
-  src/audio/backend/alsink.h
-  src/audio/backend/alsource.cpp
-  src/audio/backend/alsource.h
-  src/audio/backend/openal.cpp
-  src/audio/backend/openal.h
-  src/audio/iaudiosettings.h
-  src/audio/iaudiocontrol.h
-  src/audio/iaudiosink.h
-  src/audio/iaudiosource.h
   src/chatlog/chatlinecontent.cpp
   src/chatlog/chatlinecontent.h
   src/chatlog/chatlinecontentproxy.cpp
@@ -670,6 +658,7 @@ target_link_libraries(${PROJECT_NAME}_static
   ${ALL_LIBRARIES})
 
 target_link_libraries(${PROJECT_NAME}_static util_library)
+target_link_libraries(${PROJECT_NAME}_static audio_library)
 
 add_executable(${PROJECT_NAME}
   WIN32
