--- a/audio/CMakeLists.txt
+++ b/audio/CMakeLists.txt
@@ -14,25 +14,30 @@
 #   You should have received a copy of the GNU General Public License
 #   along with qTox.  If not, see <http://www.gnu.org/licenses/>
 
-set(FILE_LIST
-    "audio.h"
-    "audio.cpp"
-    "backend/alsink.cpp"
-    "backend/alsink.h"
-    "backend/alsource.cpp"
-    "backend/alsource.h"
-    "backend/openal.cpp"
-    "backend/openal.h"
-    "iaudiocontrol.h"
-    "iaudiosettings.h"
-    "iaudiosink.h"
-    "iaudiosource.h")
-    
+set(SOURCE_FILES
+    "src/audio.h"
+    "src/audio.cpp"
+    "src/backend/alsink.cpp"
+    "src/backend/alsink.h"
+    "src/backend/alsource.cpp"
+    "src/backend/alsource.h"
+    "src/backend/openal.cpp"
+    "src/backend/openal.h"
+    "src/iaudiocontrol.h"
+    "src/iaudiosettings.h"
+    "src/iaudiosink.h"
+    "src/iaudiosource.h")
 
-add_library(audio_library STATIC ${FILE_LIST})
+add_library(audio_library STATIC ${SOURCE_FILES})
+
+qt5_add_resources(
+    audio_library
+    res.qrc
+    OPTIONS ${RCC_OPTIONS}
+)
 
 # We need this directory, and users of our library will need it too
-target_include_directories(audio_library PUBLIC ./)
+target_include_directories(audio_library PUBLIC ./src/)
 
 target_link_libraries(audio_library ${util_libary})
 target_link_libraries(audio_library Qt5::Core)
