refactor: move translations to their own module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,54 +169,8 @@ qt5_wrap_ui(${PROJECT_NAME}_FORMS
   src/widget/form/settings/privacysettings.ui
   src/widget/form/settings/userinterfacesettings.ui)
 
-qt5_add_translation(${PROJECT_NAME}_QM_FILES
-  translations/ar.ts
-  translations/be.ts
-  translations/bg.ts
-  translations/cs.ts
-  translations/da.ts
-  translations/de.ts
-  translations/el.ts
-  translations/eo.ts
-  translations/es.ts
-  translations/et.ts
-  translations/fa.ts
-  translations/fi.ts
-  translations/fr.ts
-  translations/he.ts
-  translations/hr.ts
-  translations/hu.ts
-  translations/it.ts
-  translations/ja.ts
-  translations/jbo.ts
-  translations/ko.ts
-  translations/lt.ts
-  translations/mk.ts
-  translations/nl.ts
-  translations/no_nb.ts
-  translations/pl.ts
-  translations/pr.ts
-  translations/pt.ts
-  translations/pt_BR.ts
-  translations/ro.ts
-  translations/ru.ts
-  translations/sk.ts
-  translations/sl.ts
-  translations/sr.ts
-  translations/sr_Latn.ts
-  translations/sv.ts
-  translations/sw.ts
-  translations/ta.ts
-  translations/tr.ts
-  translations/ug.ts
-  translations/uk.ts
-  translations/zh_CN.ts
-  translations/zh_TW.ts
-)
-
 set(${PROJECT_NAME}_RESOURCES
     res.qrc
-    ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc
 )
 
 if(NOT SMILEYS)
@@ -235,25 +189,6 @@ if(NOT "${SMILEYS}" STREQUAL "DISABLED")
   endif()
 
 endif()
-
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/translations.qrc.in"
-"<!DOCTYPE RCC>
-<RCC version=\"1.0\">
-  <qresource prefix=\"/translations\">
-")
-foreach(qm ${${PROJECT_NAME}_QM_FILES})
-  get_filename_component(qm_name ${qm} NAME)
-  file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/translations.qrc.in"
-    "    <file alias=\"${qm_name}\">${qm}</file>\n")
-endforeach(qm)
-file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/translations.qrc.in"
-"  </qresource>
-</RCC>
-")
-
-execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different
-  ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc.in
-  ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc)
 
 set(${PROJECT_NAME}_SOURCES
   src/chatlog/chatlinecontent.cpp
@@ -650,18 +585,19 @@ MESSAGE( STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS} )
 
 add_subdirectory(util)
 add_subdirectory(audio)
+add_subdirectory(translations)
 
 add_library(${PROJECT_NAME}_static
   STATIC
   ${${PROJECT_NAME}_FORMS}
-  ${${PROJECT_NAME}_SOURCES}
-  ${${PROJECT_NAME}_QM_FILES})
+  ${${PROJECT_NAME}_SOURCES})
 target_link_libraries(${PROJECT_NAME}_static
   ${CMAKE_REQUIRED_LIBRARIES}
   ${ALL_LIBRARIES})
 
 target_link_libraries(${PROJECT_NAME}_static util_library)
 target_link_libraries(${PROJECT_NAME}_static audio_library)
+target_link_libraries(${PROJECT_NAME}_static translations_library)
 
 add_executable(${PROJECT_NAME}
   WIN32
