feat(chat): Implement global hotkey capture and push-to-talk
The mute option in each call is toggled when the key combo is pressed, so this
feature is also effectively push-to-mute as well if users are unmuted in chat
to start.

Load libuiohook at runtime because it registers with the OS on library load,
and segfaults if no window system is available, e.g. for unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,6 +261,10 @@ set(${PROJECT_NAME}_SOURCES
   src/grouplist.h
   src/ipc.cpp
   src/ipc.h
+  src/globalshortcut.cpp
+  src/globalshortcut.h
+  src/hookmanager.cpp
+  src/hookmanager.h
   src/model/about/aboutfriend.cpp
   src/model/about/aboutfriend.h
   src/model/about/iaboutfriend.h
