--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -60,3 +60,4 @@ target_link_libraries(core_library util_library)
 target_link_libraries(core_library audio_library)
 target_link_libraries(core_library Qt5::Core)
 target_link_libraries(core_library Qt5::Network)
+target_link_libraries(core_library Qt5::Gui)
