refactor(coreav): make Core stand alone
- remove CoreAV dependencies outside of core module
- remove useless qTox dependency on libvpx

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCE_FILES
     "include/core/icoregroupquery.h"
     "include/core/icoreidhandler.h"
     "include/core/icoresettings.h"
+    "include/core/icorevideo.h"
     "include/core/itoxstatus.h"
     "include/core/igroupsettings.h"
     "include/core/receiptnum.h"
