chore: move OSX to use Brewfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -152,6 +152,10 @@ jobs:
         ccache: true
         directories:
           - $HOME/Library/Caches/Homebrew
+      addons:
+        homebrew:
+          brewfile: ./osx/Brewfile
+          update: true
       before_cache:
         - brew cleanup
       script:
