feat(osx): Add support for macOS 10.16, remove support for macOS 10.13
Stop specifying a specific path in cmake for the SDK, since the path differs in
10.16, and cmake will find it automatically.

Use the oldest supported SDK based on https://developer.apple.com/support/xcode/

Fix #6252

--- a/.travis.yml
+++ b/.travis.yml
@@ -146,7 +146,7 @@ jobs:
           - /opt/build-windows/x86_64
     - stage: "macOS, AppImage and Flatpak"
       os: osx
-      osx_image: xcode9.3
+      osx_image: xcode10.2 # macOS 10.14, oldest supported SDK according to https://developer.apple.com/support/xcode/
       env: JOB=build-osx
       cache:
         timeout: 300 # seconds
