fix(osx): Fix product name when prompting for mic and camera permissions
Because we don't build with xcode with an xcode project, I think that causes
these variables to not be expanded.

Fix #6261

--- a/osx/info.plist
+++ b/osx/info.plist
@@ -88,9 +88,9 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to the camera for video calls.</string>
+	<string>qTox needs access to the camera for video calls.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to the microphone for audio calls.</string>
+	<string>qTox needs access to the microphone for audio calls.</string>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict>
