chore(travis): add code coverage report generation
This change adds a cmake configuration switch to enable code coverage
instrumentation during the compilation of the project. When tests are
executed, the instrumentation outputs coverage data to output files in
the build directory. Programs such as lcov/gcovr can turn that data into
reports.

This change also adds steps to the travis CI configuration to build with
this configuration switch and then use lcov to generate the consolidated
report and publish to codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,18 @@ jobs:
     - stage: Linux
       os: linux
       env: JOB=build-ubuntu-16-04
+      addons:
+        apt:
+          packages: 
+            - lcov
       script: "./.travis/$JOB.sh"
+      after_success:
+        # Create lcov report
+        - lcov --directory _debug --capture --output-file coverage.info
+        # Filter out system headers and test sources
+        - lcov --remove coverage.info '/usr/*' '*/test/*' '*/*_autogen/*' --output-file coverage.info
+        # Upload report to codecov.io 
+        - bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
     - stage: "Windows Stage 1: Dependencies (OpenSSL, Qt)"
       os: linux
       # Makes the cache this job creates avaiable only to jobs with WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE=i686,
