--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -81,16 +81,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run
         run: ./flatpak/build-flatpak.sh
-  win:
-    name: Windows
+  win-deps:
+    name: Windows Deps
     runs-on: ubuntu-latest
     strategy:
       matrix:
         arch: [i686, x86_64]
-        type: [debug, release]
     env:
       BUILD__: ${{ matrix.arch }}
-      BTYPE__: ${{ matrix.type }}
     steps:
       - uses: actions/checkout@v2
       - name: Cache dependencies
@@ -109,6 +107,24 @@ jobs:
         run: |
           ./.travis/build-windows.sh "$BUILD__" "release" "cache/${BUILD__}" stage2
           ls -al cache
+  win:
+    name: Windows
+    runs-on: ubuntu-latest
+    needs: win-deps
+    strategy:
+      matrix:
+        arch: [i686, x86_64]
+        type: [debug, release]
+    env:
+      BUILD__: ${{ matrix.arch }}
+      BTYPE__: ${{ matrix.type }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Fetch cached dependencies
+        uses: actions/cache@v2
+        with:
+          path: cache
+          key: deps-${{ matrix.arch }}-${{ hashFiles('windows/cross-compile/build.sh') }}-${{ hashFiles('.travis/build-windows.sh') }}
       - name: qTox build
         run: |
           ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" "cache/${BUILD__}" stage3
