chore: Set DEBIAN_FRONTEND=noninteractive in docker builds
Found in #6396.

Not needed yet, but will be in later versions of apt-get, so might as
well add it now so we don't forget.

--- a/docker/Dockerfile.debian
+++ b/docker/Dockerfile.debian
@@ -16,6 +16,8 @@
 
 FROM debian:stretch
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update && \
     apt-get -y --force-yes install \
     automake \
