chore: Disable bootstrap daemon for toxcore in docker builds
It's disabled for other toxcore builds in qTox since it's unused by
qTox. It also requires libconfig as a dep which is missing here.

--- a/docker/Dockerfile.debian
+++ b/docker/Dockerfile.debian
@@ -53,7 +53,7 @@ RUN apt-get update && \
 RUN git clone https://github.com/toktok/c-toxcore.git /toxcore
 WORKDIR /toxcore
 RUN git checkout v0.2.12 && \
-        cmake . && \
+        cmake . -DBOOTSTRAP_DAEMON=OFF && \
         cmake --build . && \
         make install && \
         echo '/usr/local/lib/' >> /etc/ld.so.conf.d/locallib.conf && \
